--- a/typescript/.prettierrc
+++ b/typescript/.prettierrc
@@ -1,9 +1,4 @@
 {
-  "tabWidth": 4,
-  "useTabs": false,
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "bracketSpacing": true,
-  "printWidth": 100
+  "tabWidth": 2,
+  "useTabs": false
 }
